Update prompt docs to use genai namespace
Signed-off-by: B-Step62 <yuki.watanabe@databricks.com>

--- a/docs/docs/classic-ml/mlflow-3/genai-agent.mdx
+++ b/docs/docs/classic-ml/mlflow-3/genai-agent.mdx
@@ -29,7 +29,7 @@ First, we register a prompt template as a prompt version in MLflow. This allows 
 ```python
 import mlflow
 
-system_prompt = mlflow.register_prompt(
+system_prompt = mlflow.genai.register_prompt(
     name="chatbot_prompt",
     template="You are a chatbot that can answer questions about IT. Answer this question: {{question}}",
     commit_message="Initial version of chatbot",
