--- a/docs/docs/genai/prompt-version-mgmt/version-tracking/quickstart.mdx
+++ b/docs/docs/genai/prompt-version-mgmt/version-tracking/quickstart.mdx
@@ -46,7 +46,7 @@ Start by creating a versioned prompt template. This enables you to track prompt 
 ```python
 import mlflow
 
-system_prompt = mlflow.register_prompt(
+system_prompt = mlflow.genai.register_prompt(
     name="chatbot_prompt",
     template="You are a chatbot that can answer questions about IT. Answer this question: {{question}}",
     commit_message="Initial version of chatbot",
