--- a/docs/docs/prompts/index.mdx
+++ b/docs/docs/prompts/index.mdx
@@ -51,7 +51,7 @@ import TabItem from "@theme/TabItem";
   </TabItem>
   <TabItem value="python" label="Python" default>
     <div class="flex-column">
-      To create a new prompt using the Python API, use <APILink fn="mlflow.register_prompt" /> API:
+      To create a new prompt using the Python API, use <APILink fn="mlflow.genai.register_prompt" /> API:
 
       ```python
       import mlflow
@@ -64,7 +64,7 @@ import TabItem from "@theme/TabItem";
       """
 
       # Register a new prompt
-      prompt = mlflow.register_prompt(
+      prompt = mlflow.genai.register_prompt(
           name="summarization-prompt",
           template=initial_template,
           # Optional: Provide a commit message to describe the changes
@@ -111,7 +111,7 @@ This creates a new prompt with the specified template text and metadata. The pro
   </TabItem>
   <TabItem value="python" label="Python" default>
     <div class="flex-column">
-      To update an existing prompt with a new version, use the <APILink fn="mlflow.register_prompt"/> API with the existing prompt name:
+      To update an existing prompt with a new version, use the <APILink fn="mlflow.genai.register_prompt"/> API with the existing prompt name:
 
       ```python
       import mlflow
@@ -129,7 +129,7 @@ This creates a new prompt with the specified template text and metadata. The pro
       """
 
       # Register a new version of an existing prompt
-      updated_prompt = mlflow.register_prompt(
+      updated_prompt = mlflow.genai.register_prompt(
           name="summarization-prompt",  # Specify the existing prompt name
           template=new_template,
           commit_message="Improvement",
@@ -152,7 +152,7 @@ Once you have multiple versions of a prompt, you can compare them to understand 
 
 ### 4. Load and Use the Prompt
 
-To use a prompt in your GenAI application, you can load it with the <APILink fn="mlflow.load_prompt"/> API and fill in the variables using the <APILink fn="mlflow.entities.Prompt.format"/> method of the prompt object:
+To use a prompt in your GenAI application, you can load it with the <APILink fn="mlflow.genai.load_prompt"/> API and fill in the variables using the <APILink fn="mlflow.entities.Prompt.format"/> method of the prompt object:
 
 ```python
 import mlflow
@@ -167,7 +167,7 @@ MLflow Projects, MLflow Models, and MLflow Registry.
 """
 
 # Load the prompt
-prompt = mlflow.load_prompt("prompts:/summarization-prompt/2")
+prompt = mlflow.genai.load_prompt("prompts:/summarization-prompt/2")
 
 # Use the prompt with an LLM
 client = openai.OpenAI()
@@ -194,7 +194,7 @@ You can discover prompts by name, tag or other registry fields:
   import mlflow
 
   # Fluent API: returns a flat list of all matching prompts
-  prompts = mlflow.search_prompts(filter_string="task='summarization'")
+  prompts = mlflow.genai.search_prompts(filter_string="task='summarization'")
   print(f"Found {len(prompts)} prompts")
 
   # For pagination control, use the client API:
@@ -262,7 +262,7 @@ import mlflow
 from langchain.prompts import PromptTemplate
 
 # Load prompt from MLflow
-prompt = mlflow.load_prompt("question_answering")
+prompt = mlflow.genai.load_prompt("question_answering")
 
 # Convert the prompt to single brace format for LangChain (MLflow uses double braces),
 # using the `to_single_brace_format` method.
